[package]
authors = ["Jimmy Cuadra <jimmy@jimmycuadra.com>", "Jake Heinz <jake@discord.com>"]
description = "A client library for CoreOS's etcd."
documentation = "https://docs.rs/etcd"
edition = "2021"
homepage = "https://github.com/discord/rust-etcd"
keywords = ["etcd", "coreos", "database"]
license = "MIT"
name = "etcd"
readme = "README.md"
repository = "https://github.com/discord/rust-etcd"
version = "0.10.0"

[lib]
test = false

[dependencies]
bytes = "1.10"
http = "1.3"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
url = "2.5"
base64 = "0.22.0"
tracing = "0.1"
tokio = "1.4"
reqwest = { version = "0.12", default_features = false }
rand = "0.9"

[features]
default = ["tls"]
tls = ["reqwest/native-tls"]

[dev-dependencies]
tokio = { version = "1.4", features = ["rt-multi-thread"] }
